force-app/main/default/objects/Campaign/fields/Campaign_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID 18</label>
    <type>Text</type>
</CustomField>