force-app/main/default/objects/Campaign/fields/Trade_show_Category__c.field-meta.xml
<CustomField>
    <fullName>Trade_show_Category__c</fullName>
    <description>Used for Budget reporting purposes by marketing team</description>
    <label>Trade Show Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Daylighting and Hydro Excavation</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>HHW</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining &amp; Metals</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical/BIO</fullName>
            </value>
            <value>
                <fullName>Pipelines &amp; Terminals</fullName>
            </value>
            <value>
                <fullName>Refinery</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>