force-app/main/default/objects/Campaign/fields/Trade_show_Exhibit_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_show_Exhibit_Type__c</fullName>
    <description>Size / type of exhibit at a tradeshow</description>
    <label>Trade Show Exhibit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibit 10x10</fullName>
            </value>
            <value>
                <fullName>Exhibit 10x20</fullName>
            </value>
            <value>
                <fullName>Exhibit 20x20</fullName>
            </value>
            <value>
                <fullName>Exhibit outdoor</fullName>
            </value>
            <value>
                <fullName>Reverse Expo</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>