force-app/main/default/objects/Campaign/fields/Trade_Show_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates sponsorship was purchased at the trade show making the trade show more expensive.</description>
    <label>Trade Show Sponsorship</label>
    <type>Checkbox</type>
</CustomField>