force-app/main/default/objects/Campaign/fields/Trade_Show_Tier__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Tier__c</fullName>
    <description>List of tiers for trade show reporting</description>
    <label>Trade Show Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>