force-app/main/default/objects/Campaign/listViews/My_Created_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Created_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Primary_Business__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Murray</value>
    </filters>
    <label>IS Campaigns</label>
    <sharedTo>
        <role>SK_INS_SD_Call_Center_Inbound_Sales</role>
        <role>SalesOps_SalesSupport_AreaVP</role>
    </sharedTo>
</ListView>